<?xml version="1.0"?>
<package format="2">
  <name>uav_pid_control</name>
  <version>0.0.0</version>
  <description>The uav_pid_control package</description>

  <maintainer email="hei.go@mail.utoronto.ca">hs293go</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_eigen</build_export_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
</package>
